# model

./: Makefile  circular.c  coherent.c  d1p1.c  grid2d-view.R  grid2d.c  grid2d.h  grid2d_test.c  plotpsi.R  radial.c  schutil.c  schutil.h  stationary.c  tetest.c  tvar-view.R  tvar.c  writing.c  writing.h
c/ring_six/: notes.txt  plotting.R  potential.h
c/shared/: params.h  schdisplay.c  schutil.c  timeevol.c  timeevol.h
c/testing/: circular.c  grid2d.c  tvar-view.R
ring_six/: notes.txt  plotting.R  potential.c  potential.h  ring_six.c  ring_six.h
rust/wave/: Cargo.toml
rust/wave/src/: lib.rs  linalg.rs  main.rs  sch.rs
shared/: params.h  schdebug.c  schdebug.h  schdisplay.c  schdisplay.h  schutil.c  schutil.h  schutil_1d.c  schutil_1d.h  timeevol.c  timeevol.h
testing/: d1p1.c  grid2d.h  radial.c  tvar.c  writing.h
