[package]
name = "wave"
version = "0.1.0"
authors = ["Nicholas Ingolia <nick@ingolia.org>"]
edition = "2018"

[dependencies]
blas = "*"
lapack = "*"
num-complex = "0.2.3"
num-traits = "*"
ndarray = { version = "0.12.1", features = ["blas"] }
# openblas-src = "*"
# netlib-src = "*"
accelerate-src = "*"
