[package]
name = "wave"
version = "0.1.0"
authors = ["Nicholas Ingolia <nick@ingolia.org>"]
edition = "2018"

[dependencies]
blas = "*"
lapack = "*"
num-complex = "0.2.3"
num-traits = "*"
nalgebra = "*"
typenum = "*"
piston_window = "0.98.0"

[dependencies.nalgebra-lapack]
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
features = ["accelerate"]